fixing horizontal scroll

--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,8 @@ body {
   margin: auto;
   max-width: 100%;
   text-align: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 a {
@@ -215,6 +217,9 @@ input[type="checkbox"]:checked + span {
   padding: 20px 40px !important;
 }
 
+#fastcoMovie {
+  margin-top: 20px;
+}
 
 .footer {
   background-color: black;
